[package]
name = "win-foreground-listener"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.28.0", features = ["rt", "rt-multi-thread"] }
winapi = {version = "0.3.9" }
wineventhook = "0.7.0"
once_cell = "1"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "channel-api"]
